# yeti-cloud

./: .gitignore  README.md  copy_deps.bat
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: yeti-config.json
android/app/src/main/java/cloud/yeti/app/: DeployFragment.java  MainActivity.java  StatusFragment.java  YetiClient.java
android/app/src/main/java/cloud/yeti/app/config/: ConfigManager.java  HasNoConfig.java
android/app/src/main/java/cloud/yeti/app/core/: DeploySsh.java
android/app/src/main/java/cloud/yeti/app/utils/: Terminal.java
android/app/src/main/res/drawable/: ic_folder.xml
android/app/src/main/res/layout/: activity_main.xml  fragment_deploy.xml  fragment_status.xml
android/app/src/main/res/menu/: main_menu.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
desktop/: CMakeLists.txt
desktop/config/windows/: yeti-desktop-config.json
desktop/core/: CMakeLists.txt  client.cpp  client.h  config_manager.cpp  config_manager.h  http_client.cpp  http_client.h  log_buffer.cpp  log_buffer.h  ssh_deployer.cpp  ssh_deployer.h
desktop/ui/: CMakeLists.txt  add_server_page.cpp  add_server_page.h  console_widget.cpp  console_widget.h  deploy_dialog.cpp  deploy_dialog.h  main.cpp  main_window.cpp  main_window.h  status_page.cpp  status_page.h  tray_icon.cpp  tray_icon.h
docs/: architecture.md  storage-rules.md
server/: Dockerfile  docker-compose.yml  go.mod
server/cmd/server/: main.go
server/config/: yeti-server-config.json
server/internal/api/: handler.go  helpers.go  middleware.go
server/internal/auth/: auth.go
server/internal/config/: config.go
server/internal/hub/: hub.go
